# EquationOfLine

./: CMakeLists.txt  README.md  build.sh
Source/include/: LineEquationSolver.h
Source/src/: main.cpp
Test/: LineEquationTest.cpp
